[gd_scene load_steps=3 format=3 uid="uid://cl74duexcasnv"]

[ext_resource type="Script" uid="uid://ctlcyxkaykd0r" path="res://asset/DialogueBox.gd" id="1_k2nt0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k2nt0"]
content_margin_left = 40.0
content_margin_top = 40.0
content_margin_right = 40.0
content_margin_bottom = 40.0
bg_color = Color(0, 0, 0, 0.803922)

[node name="DialogueBox" type="CanvasLayer"]
script = ExtResource("1_k2nt0")

[node name="DialoguePanel" type="PanelContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1488.0
offset_right = 2.0
offset_bottom = -1147.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_k2nt0")

[node name="DialogueLabel" type="RichTextLabel" parent="DialoguePanel"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
fit_content = true
scroll_active = false

[node name="AdvanceIndicator" type="Label" parent="DialoguePanel/DialogueLabel"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -85.0
offset_top = -92.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 100
text = ">"
